--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "stuff to make the website for hoop and loops",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "firebase serve"
   },
   "engines": {
     "node": "8"
