--- a/package.json
+++ b/package.json
@@ -1,31 +1,26 @@
 {
-  "name": "hoops-and-loops",
-  "version": "1.0.0",
-  "description": "stuff to make the website for hoop and loops",
-  "main": "index.js",
+  "name": "hoop-and-loops",
+  "version": "0.1.0",
+  "description": "The Hoop & Loops Website",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "firebase serve"
+    "admin": "cd admin && npm start",
+    "build:admin": "cd admin && npm build",
+    "build:site": "",
+    "build": "npm run build:admin && npm run build:site",
+    "deploy:admin": "cd admin && npm run deploy",
+    "deploy:site": "",
+    "deploy": "npm run deploy:admin && npm run deploy:site",
+    "postinstall": "cd admin && npm install",
+    "postuninstall": "cd admin && npm uninstall"
   },
-  "engines": {
-    "node": "8"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JordanShurmer/hoop-and-loops.git"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cookie-parser": "^1.4.3",
-    "express": "^4.16.4",
-    "express-handlebars": "^3.0.0",
-    "firebase": "^5.5.4",
-    "firebase-admin": "^6.0.0",
-    "firebase-functions": "^2.0.5",
-    "handlebars": "^4.0.12"
+  "author": "Jordan Shurmer <jordan@shurmerfamily.com>",
+  "license": "Unlicense",
+  "bugs": {
+    "url": "https://github.com/JordanShurmer/hoop-and-loops/issues"
   },
-  "devDependencies": {
-    "css-loader": "^1.0.1",
-    "jquery": "^3.3.1",
-    "mini-css-extract-plugin": "^0.4.4",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
-  }
+  "homepage": "https://github.com/JordanShurmer/hoop-and-loops#readme"
 }
