Moving to sapper! WIP

--- a/site/firebase.json
+++ b/site/firebase.json
@@ -10,7 +10,7 @@
     "public": "public",
     "rewrites": [
       {
-        "source": "**/**",
+        "source": "/**",
         "function": "app"
       }
     ],
