--- a/package.json
+++ b/package.json
@@ -2,16 +2,27 @@
   "name": "hoop-and-loops",
   "version": "0.1.0",
   "description": "The Hoop & Loops Website",
+  "engines": {
+    "node": "8"
+  },
   "scripts": {
     "admin": "cd admin && npm start",
+    "dev": "sapper dev",
     "build:admin": "cd admin && npm build",
-    "build:site": "",
-    "build": "npm run build:admin && npm run build:site",
+    "build:site": "sapper build",
+    "build": "npm-r --race build:admin build:site",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open",
     "deploy:admin": "cd admin && npm run deploy",
     "deploy:site": "",
     "deploy": "npm run deploy:admin && npm run deploy:site",
-    "postinstall": "concurrently \"cd admin && npm install\" \"cd semantic && gulp build\" \"cd site && npm install\"",
-    "postuninstall": "concurrently \"cd admin && npm uninstall\" \"cd site && npm uninstall\""
+    "export": "sapper export",
+    "x-postinstall": "run-p --race \"cd admin && npm install\" \"cd semantic && gulp build\"",
+    "x-postuninstall": "cd admin && npm uninstall",
+    "firebase": "firebase serve",
+    "watch": "watch \"sapper build\" ./src",
+    "start": "run-p --race watch firebase",
+    "test": "run-p --race dev cy:run"
   },
   "repository": {
     "type": "git",
@@ -24,6 +35,18 @@
   },
   "homepage": "https://github.com/JordanShurmer/hoop-and-loops#readme",
   "devDependencies": {
-    "concurrently": "^4.0.1"
+    "concurrently": "^4.0.1",
+    "npm-run-all": "^4.1.3",
+    "sapper": "^0.24.0",
+    "semantic-ui": "^2.4.2",
+    "svelte": "^2.15.1",
+    "svelte-loader": "^2.11.0",
+    "watch": "^1.0.2",
+    "webpack": "^4.23.1"
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "firebase-admin": "^6.1.0",
+    "firebase-functions": "^2.1.0"
   }
 }
