--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   },
   "watch": {
     "build:site": {
-      "patterns": ["src"],
-      "extensions": "js,html"
+      "patterns": [
+        "src"
+      ],
+      "extensions": "js,html",
+      "runOnChangeOnly": true
     }
   },
   "scripts": {
@@ -27,7 +30,8 @@
     "x-postuninstall": "cd admin && npm uninstall",
     "firebase": "firebase serve",
     "watch": "npm-watch build:site",
-    "start": "cross-env run-p --race watch firebase",
+    "serve": "run-p --race watch firebase",
+    "start": "run-s build:site serve",
     "test": "run-p --race dev cy:run"
   },
   "repository": {
@@ -52,6 +56,7 @@
     "webpack": "^4.23.1"
   },
   "dependencies": {
+    "chalk": "^2.4.1",
     "express": "^4.16.4",
     "firebase": "^5.5.7",
     "firebase-admin": "^6.1.0",
